--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="japanRed">#be0029</color>
+    <color name="japanWhite">#ffffff</color>
+    <color name="samuraiBlue">#26558B</color>
 </resources>
