--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -14,9 +14,6 @@
             android:id="@+id/searchBar"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="25dp"
             android:iconifiedByDefault="false"
             android:queryHint="Search word in English or Japanese"
             app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +31,20 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+
+        <TextView
+            android:id="@+id/searchEnglish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:text="Search for English Instead"
+            android:textColor="@android:color/holo_blue_light"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@+id/searchBar"
             app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 
 
