--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,9 +7,9 @@
         <item name="colorOnPrimary">@color/japanWhite</item>
         <item name="android:windowBackground">@color/japanWhite</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/japanRed</item>
+        <item name="colorSecondaryVariant">@color/japanRed</item>
+        <item name="colorOnSecondary">@color/japanWhite</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
