--- a/app/src/main/res/layout/dictionary_entry.xml
+++ b/app/src/main/res/layout/dictionary_entry.xml
@@ -29,12 +29,14 @@
 
     <TextView
         android:id="@+id/englishDefinitions"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:text="house, residence, dwelling"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/kanji"
         app:layout_constraintTop_toBottomOf="@+id/kanji" />
 </androidx.constraintlayout.widget.ConstraintLayout>
