--- a/app/src/main/res/layout/text_recycler.xml
+++ b/app/src/main/res/layout/text_recycler.xml
@@ -19,8 +19,12 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
             android:gravity="center|start"
+            android:textColor="@color/black"
             android:text="Empty"
             android:textSize="30sp"
+            android:textIsSelectable="true"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
