--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="japanRed">#be0029</color>
     <color name="japanWhite">#ffffff</color>
     <color name="samuraiBlue">#26558B</color>
+    <color name="blue">#1F7EEC</color>
+    <color name="highlight">#A2FFC4</color>
 </resources>
