--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,18 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ReadAndLearnJapanese" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ReadAndLearnJapanese" parent="Theme.Material3.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/japanRed</item>
-        <item name="colorPrimaryVariant">@color/japanRed</item>
-        <item name="colorOnPrimary">@color/japanWhite</item>
-        <item name="android:windowBackground">@color/japanWhite</item>
-        <item name="android:textColorHighlight">@color/highlight</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/japanRed</item>
-        <item name="colorSecondaryVariant">@color/japanRed</item>
-        <item name="colorOnSecondary">@color/japanWhite</item>
+
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
         <!-- Customize your theme here. -->
     </style>
+
 </resources>
