--- a/app/src/main/res/layout/text_recycler.xml
+++ b/app/src/main/res/layout/text_recycler.xml
@@ -25,6 +25,7 @@
             android:textIsSelectable="true"
             android:clickable="true"
             android:focusable="true"
+            android:focusableInTouchMode="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
