Update color scheme

--- a/app/src/main/res/layout/text_list.xml
+++ b/app/src/main/res/layout/text_list.xml
@@ -15,6 +15,7 @@
         android:layout_marginBottom="0dp"
         android:clickable="true"
         android:focusable="true"
+        app:cardBackgroundColor="@color/background"
         app:cardCornerRadius="0dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true">
