--- a/app/src/main/res/layout/popup_window.xml
+++ b/app/src/main/res/layout/popup_window.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="75dp"
+        app:cardBackgroundColor="@color/background"
         app:cardCornerRadius="15dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true">
