--- a/app/src/main/res/layout/text_recycler.xml
+++ b/app/src/main/res/layout/text_recycler.xml
@@ -19,7 +19,7 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
             android:gravity="center|start"
-            android:textColor="@color/black"
+            android:textColor="@color/readingText"
             android:text="Empty"
             android:textSize="30sp"
             android:textIsSelectable="true"
