--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -47,6 +47,17 @@
             app:layout_constraintEnd_toEndOf="@+id/searchBar"
             app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
