--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#2C2323</color>
+    <color name="background">#272626</color>
     <color name="readingText">@color/japanWhite</color>
 </resources>
