--- a/app/src/main/res/layout/flashcard.xml
+++ b/app/src/main/res/layout/flashcard.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Flashcard">
 
     <TextView
         android:id="@+id/frontOfCard"
@@ -17,18 +18,27 @@
         app:layout_constraintEnd_toEndOf="@+id/divider"
         app:layout_constraintStart_toStartOf="@+id/divider" />
 
-    <TextView
-        android:id="@+id/backOfCard"
+    <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:text="Back"
-        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/showReadingButton"
         app:layout_constraintEnd_toEndOf="@+id/divider"
         app:layout_constraintStart_toStartOf="@+id/divider"
-        app:layout_constraintTop_toBottomOf="@+id/divider" />
+        app:layout_constraintTop_toBottomOf="@+id/divider">
+
+        <TextView
+            android:id="@+id/backOfCard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="Back"
+            android:textSize="24sp" />
+
+    </ScrollView>
+
 
     <View
         android:id="@+id/divider"
@@ -36,6 +46,7 @@
         android:layout_height="1dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
+        android:layout_marginBottom="200dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toTopOf="@+id/goodButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,4 +98,16 @@
         app:layout_constraintBottom_toTopOf="@+id/showButton"
         app:layout_constraintEnd_toEndOf="@+id/frontOfCard"
         app:layout_constraintStart_toStartOf="@+id/frontOfCard" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
+        android:clickable="true"
+        app:tint="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/divider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/divider"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
 </androidx.constraintlayout.widget.ConstraintLayout>
